[metadata]
name = pointercratepy
version = 1.1.0
author = Kévin BRETHES
author_email = bretheskevin@gmail.com
description = API wrapper for Pointercrate.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bretheskevin/pointercrate.py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True